--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ services:
     ports:
       - "9002:9001"
       - "5555:5555"
+    volumes:
+      - ./:/usr/src/app
+      - /usr/src/app/node_modules
     env_file:
       - .env
     healthcheck:
@@ -19,6 +22,7 @@ services:
     depends_on:
       - db
       - redis
+    command: sh -c "npx prisma migrate deploy && npm run start:dev"
     networks:
       - restaurants_booking_admin_network
 
