--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,5 @@
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false
   },
-  "include": ["src", "**/*spec.ts"], // ✅ Chỉ compile src
-  "exclude": ["node_modules", "dist", "test"]
+  "include": ["src", "test", "**/*spec.ts"]
 }
