--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,23 @@
+# VARIABLES IN DEVELOPMENT ENVIRONMENT
 PORT=""
+
+FRONTEND_URL=""
 
 DATABASE_URL=""
 POSTGRES_USER=""
 POSTGRES_PASSWORD=""
 POSTGRES_DB=""
+
+JWT_SECRET=""
+
+# VARIABLES IN PRODUCTION ENVIRONMENT
+PORT=""
+
+DATABASE_URL=""
+DB_HOST=""
+DB_PORT=""
+DB_NAME=""
+DB_USER=""
+DB_PASSWORD=""
 
 JWT_SECRET=""
