--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "dev": "docker-compose -f docker-compose.dev.yaml up -d",
+    "dev:build": "docker-compose -f docker-compose.dev.yaml up --build",
+    "dev:down": "docker-compose -f docker-compose.dev.yaml down",
+    "dev:clean": "docker-compose -f docker-compose.dev.yaml down -v",
+    "prod": "docker-compose up -d",
+    "prod:build": "docker-compose up -d --build",
+    "prod:down": "docker-compose down",
+    "prod:logs": "docker-compose logs -f",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
