--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -29,54 +29,75 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
       - uses: actions/checkout@v4
-
-      - name: Create .env file
-        run: |
-          cat << EOF > .env
-          PORT=${{ secrets.PORT }}
-          NODE_ENV=production
-
-          # RDS PostgreSQL Configuration
-          DATABASE_URL=${{ secrets.DATABASE_URL }}
-          DB_HOST=${{ secrets.DB_HOST }}
-          DB_PORT=${{ secrets.DB_PORT }}
-          DB_NAME=${{ secrets.DB_NAME }}
-          DB_USER=${{ secrets.DB_USER }}
-          DB_PASSWORD=${{ secrets.DB_PASSWORD }}
-
-          JWT_SECRET=${{ secrets.JWT_SECRET }}
-          FRONTEND_URL=${{ secrets.FRONTEND_URL }}
-          EOF
 
       - name: Setup SSH Key
         run: |
           echo "${{ secrets.EC2_SSH_KEY }}" > private_key.pem
           chmod 600 private_key.pem
 
-      - name: Copy files to EC2 server
+      - name: Copy source code to EC2
         run: |
-          scp -i private_key.pem -o StrictHostKeyChecking=no -r ./* \
-            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/ec2-user/Solis.BE/
+          # Copy toàn bộ source code (exclude những thứ không cần)
+          rsync -avz --exclude='.git' --exclude='node_modules' --exclude='.env' \
+            -e "ssh -i private_key.pem -o StrictHostKeyChecking=no" \
+            ./ ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/ec2-user/Solis.BE/
 
-      - name: Deploy on EC2
+      - name: Create .env and Deploy on EC2
         run: |
           ssh -i private_key.pem -o StrictHostKeyChecking=no \
-            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'ENDSSH'
             cd /home/ec2-user/Solis.BE
+            
+            # Create .env file with secrets
+            cat > .env << 'ENVFILE'
+          PORT=${{ secrets.PORT }}
+          NODE_ENV=production
+          DATABASE_URL=${{ secrets.DATABASE_URL }}
+          DB_HOST=${{ secrets.DB_HOST }}
+          DB_PORT=${{ secrets.DB_PORT }}
+          DB_NAME=${{ secrets.DB_NAME }}
+          DB_USER=${{ secrets.DB_USER }}
+          DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+          JWT_SECRET=${{ secrets.JWT_SECRET }}
+          FRONTEND_URL=${{ secrets.FRONTEND_URL }}
+          ENVFILE
+            
+            chmod 600 .env
+            
+            # Verify .env exists
+            echo "✅ .env file created:"
+            ls -lh .env
+            
+            # Deploy with Docker Compose
+            echo "🚀 Starting deployment..."
+            docker compose down || docker-compose down
+            docker compose build --no-cache || docker-compose build --no-cache
+            docker compose up -d || docker-compose up -d
 
-            docker-compose down
-            docker-compose build --no-cache
-            docker-compose up -d
+            # Wait for services to start
+            echo "⏳ Waiting for services to start..."
+            sleep 15
+            
+            # Show status
+            echo "📊 Container status:"
+            docker compose ps || docker-compose ps
+            
+            echo "📝 Recent logs:"
+            docker compose logs --tail=50 || docker-compose logs --tail=50
+            
+            # Health check
+            echo "🏥 Health check:"
+            curl -f http://localhost:9001/api/v1/health || echo "Health check failed"
 
-            sleep 10
-            docker-compose ps
-            docker-compose logs --tail=50
-
+            # Cleanup
             docker system prune -f
-          EOF
+            echo "✅ Deployment completed!"
+          ENDSSH
 
       - name: Clean up
         if: always()
