--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -29,16 +29,9 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
-    
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
       - uses: actions/checkout@v4
-
-      - name: Setup SSH Key
-        run: |
-          echo "${{ secrets.EC2_SSH_KEY }}" > private_key.pem
-          chmod 600 private_key.pem
 
       - name: Copy source code to EC2
         run: |
@@ -46,58 +39,53 @@ jobs:
           rsync -avz --exclude='.git' --exclude='node_modules' --exclude='.env' \
             -e "ssh -i private_key.pem -o StrictHostKeyChecking=no" \
             ./ ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/ec2-user/Solis.BE/
-
-      - name: Create .env and Deploy on EC2
+      - name: Create .env file
         run: |
-          ssh -i private_key.pem -o StrictHostKeyChecking=no \
-            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'ENDSSH'
-            cd /home/ec2-user/Solis.BE
-            
-            # Create .env file with secrets
-            cat > .env << 'ENVFILE'
+          cat << EOF > .env
           PORT=${{ secrets.PORT }}
           NODE_ENV=production
+
+          # RDS PostgreSQL Configuration
           DATABASE_URL=${{ secrets.DATABASE_URL }}
           DB_HOST=${{ secrets.DB_HOST }}
           DB_PORT=${{ secrets.DB_PORT }}
           DB_NAME=${{ secrets.DB_NAME }}
           DB_USER=${{ secrets.DB_USER }}
           DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+
           JWT_SECRET=${{ secrets.JWT_SECRET }}
           FRONTEND_URL=${{ secrets.FRONTEND_URL }}
-          ENVFILE
-            
-            chmod 600 .env
-            
-            # Verify .env exists
-            echo "✅ .env file created:"
-            ls -lh .env
-            
-            # Deploy with Docker Compose
-            echo "🚀 Starting deployment..."
+          EOF
+
+      - name: Setup SSH Key
+        run: |
+          echo "${{ secrets.EC2_SSH_KEY }}" > private_key.pem
+          chmod 600 private_key.pem
+
+      - name: Copy files to EC2 server
+        run: |
+          scp -i private_key.pem -o StrictHostKeyChecking=no -r \
+            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/ec2-user/Solis.BE/
+
+          scp -i private_key.pem -o StrictHostKeyChecking=no .env \
+            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/ec2-user/Solis.BE/.env
+      - name: Deploy on EC2
+        run: |
+          ssh -i private_key.pem -o StrictHostKeyChecking=no \
+            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+            cd /home/ec2-user/Solis.BE
+      
+            # Use docker-compose with proper permissions
             docker compose down || docker-compose down
             docker compose build --no-cache || docker-compose build --no-cache
             docker compose up -d || docker-compose up -d
 
-            # Wait for services to start
-            echo "⏳ Waiting for services to start..."
-            sleep 15
-            
-            # Show status
-            echo "📊 Container status:"
+            sleep 10
             docker compose ps || docker-compose ps
-            
-            echo "📝 Recent logs:"
             docker compose logs --tail=50 || docker-compose logs --tail=50
-            
-            # Health check
-            echo "🏥 Health check:"
-            curl -f http://localhost:9001/api/v1/health || echo "Health check failed"
 
-            # Cleanup
             docker system prune -f
-            echo "✅ Deployment completed!"
-          ENDSSH
+          EOF
 
       - name: Clean up
         if: always()
