--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -9,54 +9,27 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [20.x]
-
     steps:
       - uses: actions/checkout@v4
-      
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      
       - run: npm ci
-      # - run: npm test
 
-  deploy:
+  # Deploy chỉ khi push vào main
+  deploy-production:
     needs: build
     runs-on: ubuntu-latest
-
+    # if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    
     steps:
       - uses: actions/checkout@v4
-
-      - name: Copy source code to EC2
-        run: |
-          # Copy toàn bộ source code (exclude những thứ không cần)
-          rsync -avz --exclude='.git' --exclude='node_modules' --exclude='.env' \
-            -e "ssh -i private_key.pem -o StrictHostKeyChecking=no" \
-            ./ ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/ec2-user/Solis.BE/
-      - name: Create .env file
-        run: |
-          cat << EOF > .env
-          PORT=${{ secrets.PORT }}
-          NODE_ENV=production
-
-          # RDS PostgreSQL Configuration
-          DATABASE_URL=${{ secrets.DATABASE_URL }}
-          DB_HOST=${{ secrets.DB_HOST }}
-          DB_PORT=${{ secrets.DB_PORT }}
-          DB_NAME=${{ secrets.DB_NAME }}
-          DB_USER=${{ secrets.DB_USER }}
-          DB_PASSWORD=${{ secrets.DB_PASSWORD }}
-
-          JWT_SECRET=${{ secrets.JWT_SECRET }}
-          FRONTEND_URL=${{ secrets.FRONTEND_URL }}
-          EOF
-
+      
       - name: Setup SSH Key
         run: |
           echo "${{ secrets.EC2_SSH_KEY }}" > private_key.pem
@@ -65,27 +38,41 @@ jobs:
       - name: Copy files to EC2 server
         run: |
           scp -i private_key.pem -o StrictHostKeyChecking=no -r \
-            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/ec2-user/Solis.BE/
+            ./* ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/ec2-user/Solis.BE/
 
-          scp -i private_key.pem -o StrictHostKeyChecking=no .env \
-            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/ec2-user/Solis.BE/.env
-      - name: Deploy on EC2
+      - name: Create .env and Deploy on EC2
         run: |
           ssh -i private_key.pem -o StrictHostKeyChecking=no \
-            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'ENDSSH'
             cd /home/ec2-user/Solis.BE
-      
-            # Use docker-compose with proper permissions
+            
+            # Create .env
+            cat > .env << 'ENVFILE'
+          PORT=${{ secrets.PORT }}
+          NODE_ENV=production
+          DATABASE_URL=${{ secrets.DATABASE_URL }}
+          DB_HOST=${{ secrets.DB_HOST }}
+          DB_PORT=${{ secrets.DB_PORT }}
+          DB_NAME=${{ secrets.DB_NAME }}
+          DB_USER=${{ secrets.DB_USER }}
+          DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+          JWT_SECRET=${{ secrets.JWT_SECRET }}
+          FRONTEND_URL=${{ secrets.FRONTEND_URL }}
+          ENVFILE
+            
+            chmod 600 .env
+            
+            # Deploy
             docker compose down || docker-compose down
             docker compose build --no-cache || docker-compose build --no-cache
             docker compose up -d || docker-compose up -d
 
-            sleep 10
+            sleep 15
             docker compose ps || docker-compose ps
             docker compose logs --tail=50 || docker-compose logs --tail=50
 
             docker system prune -f
-          EOF
+          ENDSSH
 
       - name: Clean up
         if: always()
