feat(implement): create seed data

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "dev": "docker-compose -f docker-compose.dev.yaml up -d",
-    "dev:build": "docker-compose -f docker-compose.dev.yaml up --build",
+    "dev:build": "docker-compose -f docker-compose.dev.yaml up --build -d",
     "dev:down": "docker-compose -f docker-compose.dev.yaml down",
     "dev:clean": "docker-compose -f docker-compose.dev.yaml down -v",
     "prod": "docker-compose up -d",
@@ -26,6 +26,7 @@
     "db:migrate": "prisma migrate dev",
     "db:migrate:deploy": "prisma migrate deploy",
     "db:reset": "prisma migrate reset",
+    "db:seed": "npx prisma db seed",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -80,7 +81,7 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "tsx": "^4.20.6",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.20.0"
   },
