feat(implement): implement verify otp and signup, signin

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,13 @@ DB_USER=""
 DB_PASSWORD=""
 
 JWT_SECRET=""
+
+EMAIL_HOST=""
+EMAIL_PORT=""
+EMAIL_USERNAME=""
+EMAIL_PASSWORD=""
+EMAIL_FROM=""
+
+REDIS_HOST=""
+REDIS_PORT=""
+REDIS_PASSWORD=""
