--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -6,8 +6,8 @@ services:
       dockerfile: Dockerfile.dev
     restart: unless-stopped
     ports:
-      - "9002:9001"
-      - "5555:5555"
+      - '9002:9001'
+      - '5555:5555'
 
     volumes:
       - ./:/usr/src/app
@@ -21,9 +21,9 @@ services:
       - DATABASE_URL=${DATABASE_URL}
       - JWT_SECRET=${JWT_SECRET}
       - REDIS_HOST=redis
-      - REDIS_PORT=6379  
+      - REDIS_PORT=6379
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9001/api/v1/health"]
+      test: ['CMD', 'curl', '-f', 'http://localhost:9001/api/v1/health']
       interval: 30s
       timeout: 10s
       retries: 5
@@ -40,7 +40,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      - "5438:5432"
+      - '5438:5432'
     volumes:
       - pgdata:/var/lib/postgresql/data
     networks:
@@ -49,7 +49,7 @@ services:
     image: redis:7
     restart: unless-stopped
     ports:
-      - "6379:6379"
+      - '6378:6378'
     networks:
       - restaurants_booking_admin_network
   prisma-studio:
@@ -58,7 +58,7 @@ services:
     volumes:
       - ./:/app
     ports:
-      - "5556:5555"
+      - '5556:5555'
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - NODE_ENV=development
@@ -69,4 +69,4 @@ volumes:
   pgdata:
 networks:
   restaurants_booking_admin_network:
-    driver: bridge  
+    driver: bridge
