--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start:prod": "node dist/main",
     "dev": "docker-compose -f docker-compose.dev.yaml up -d",
     "dev:build": "docker-compose -f docker-compose.dev.yaml up --build",
+    "dev:rebuild": "docker-compose -f docker-compose.dev.yaml down -v && docker-compose -f docker-compose.dev.yaml up --build --force-recreate",
     "dev:down": "docker-compose -f docker-compose.dev.yaml down",
     "dev:clean": "docker-compose -f docker-compose.dev.yaml down -v",
     "prod": "docker-compose up -d",
@@ -23,7 +24,7 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "db:migrate": "prisma migrate dev",
+    "db:migrate": "docker-compose -f docker-compose.dev.yaml exec backend npx prisma migrate dev",
     "db:migrate:deploy": "prisma migrate deploy",
     "db:reset": "prisma migrate reset",
     "db:seed": "docker-compose exec backend npx prisma db seed",
@@ -37,6 +38,8 @@
   "dependencies": {
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
+    "@fastify/cookie": "^11.0.2",
+    "@fastify/static": "^8.3.0",
     "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -44,11 +47,13 @@
     "@nestjs/jwt": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-fastify": "^11.1.11",
     "@nestjs/swagger": "^11.2.3",
     "@prisma/adapter-pg": "^7.0.0",
     "argon2": "^0.44.0",
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.3",
+    "fastify": "^5.6.2",
     "handlebars": "^4.7.8",
     "husky": "^9.1.7",
     "ioredis": "^5.8.2",
