--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,8 @@ POSTGRES_USER=""
 POSTGRES_PASSWORD=""
 POSTGRES_DB=""
 
-JWT_SECRET=""
+JWT_ACCESS_TOKEN_SECRET=""
+JWT_REFRESH_TOKEN_SECRET=""
 
 # VARIABLES IN PRODUCTION ENVIRONMENT
 PORT=""
@@ -19,8 +20,6 @@ DB_PORT=""
 DB_NAME=""
 DB_USER=""
 DB_PASSWORD=""
-
-JWT_SECRET=""
 
 EMAIL_HOST=""
 EMAIL_PORT=""
