--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       dockerfile: Dockerfile
     restart: unless-stopped
     ports:
-      - "9001:9001"
+      - '9001:9001'
     environment:
       # Application
       - NODE_ENV=production
@@ -20,22 +20,23 @@ services:
       - DB_NAME=${DB_NAME}
       - DB_USER=${DB_USER}
       - DB_PASSWORD=${DB_PASSWORD}
-      
+
       # Security
-      - JWT_SECRET=${JWT_SECRET}
-      
+      - JWT_ACCESS_TOKEN_SECRET=${JWT_ACCESS_TOKEN_SECRET}
+      - JWT_REFRESH_TOKEN_SECRET=${JWT_REFRESH_TOKEN_SECRET}
+
       # Redis
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      
+
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9001/api/v1/health"]
+      test: ['CMD', 'curl', '-f', 'http://localhost:9001/api/v1/health']
       interval: 30s
       timeout: 10s
       retries: 5
       start_period: 60s
     depends_on:
-      - redis         
+      - redis
     networks:
       - restaurants_booking_admin_network
 
@@ -43,10 +44,10 @@ services:
     image: redis:7
     restart: unless-stopped
     ports:
-      - "6379:6379"
+      - '6379:6379'
     networks:
       - restaurants_booking_admin_network
-      
+
 networks:
   restaurants_booking_admin_network:
     driver: bridge
